--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,144 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <ion-searchbar placeholder="Buscar por nombre..." (ionInput)="buscarProductos($event)">
+  </ion-searchbar>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-segment (ionChange)="filtrarPorTipo($event)">
+    <ion-segment-button value="todos" checked>
+      <ion-label>Todos</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="camisas">
+      <ion-label>Camisas</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="pantalones">
+      <ion-label>Pantalones</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="zapatos">
+      <ion-label>Zapatos</ion-label>
+    </ion-segment-button>
+  </ion-segment>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-md="6" *ngFor="let producto of productos">
+        <ion-card>
+          <img [src]="producto.img" [alt]="producto.Nombre" />
+  
+          <ion-card-header>
+            <ng-container *ngIf="user; else loggedButton">
+              <ion-button expand="block"
+                (click)="openModal(producto.Producto_ID, producto.Nombre, producto.img, producto.descripcion,producto.Precio_Unitario)">
+                <ion-icon name="cart"></ion-icon>
+                <p>${{ producto.Precio_Unitario }}</p>
+              </ion-button>
+            </ng-container>
+  
+            <ng-template #loggedButton>
+              <ion-button expand="block" (click)="presentAlert()">
+                <ion-icon name="cart"></ion-icon>
+                <p>${{ producto.Precio_Unitario }}</p>
+              </ion-button>
+            </ng-template>
+            <ion-card-title>{{ producto.Nombre }}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            {{ producto.descripcion }}
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  
+  <!-- Modal -->
+  <ion-modal [isOpen]="isModalOpen" (willDismiss)="onWillDismiss()">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-buttons slot="end">
+            <ion-button (click)="cancel()"color="danger" fill="outline" >Cancelar</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+        <div class="modal-content">
+          <!-- Tarjeta principal -->
+          <div class="product-card">
+            <!-- Imagen del producto -->
+            <div class="product-image">
+              <img src="{{selectedProductId[2]}}" alt="Imagen del producto">
+            </div>
+            <!-- Información del producto -->
+            <div class="product-info">
+              <h2>{{selectedProductId[1]}}</h2>
+              <p>{{selectedProductId[3]}}</p>
+            </div>
+          </div>
+          <div class="sale-form">
+            <h3>Casi Listo: Completa los Detalles</h3>
+            
+            <!-- Selección de metodo de pago -->
+            <ion-item>
+              <ion-select class="ion-text-wrap"label="Métodos de Pago" aria-required="true">
+                <ion-select-option *ngFor="let mp of Metodos_pago" [value]="mp.Metodo_Pago_ID">
+                  {{ mp.Metodo_Pago }}
+                </ion-select-option>
+              </ion-select>
+            </ion-item>
+            
+            
+          
+            <!-- Cantidad -->
+            <ion-item>
+              <ion-label position="stacked">Cantidad</ion-label>
+              <ion-input 
+              required="ingrese una cantidad"
+                type="number" 
+                placeholder="Ingresa la cantidad" 
+                [(ngModel)]="cantidad" 
+                (ionChange)="calcularSubtotal()">
+              </ion-input>
+            </ion-item>
+          
+            <!-- Precio -->
+            <ion-item>
+              <ion-label position="stacked">Precio Unitario</ion-label>
+              <ion-input 
+                type="number" 
+                [value]="precio" 
+                disabled>
+              </ion-input>
+            </ion-item>
+             <!-- Iva -->
+             <ion-item>
+              <ion-label position="stacked">Iva</ion-label>
+              <ion-input 
+                type="number" 
+                [value]="Iva.toFixed(2)" 
+                disabled>
+              </ion-input>
+            </ion-item>
+          
+            <!-- Subtotal -->
+            <ion-item>
+              <ion-label position="stacked">Subtotal</ion-label>
+              <ion-input 
+                type="number" 
+                [value]="subtotal.toFixed(2)" 
+                disabled>
+              </ion-input>
+            </ion-item>
+
+             
+            <!-- Botón para registrar la venta -->
+            <ion-button expand="full" (click)="registrarVenta()"> <ion-icon name="card-outline"></ion-icon> Comprar</ion-button>
+          </div>
+          
+            
+       
+          </div>
+        
+      </ion-content>
+    </ng-template>
+  </ion-modal>
+  
+
 </ion-content>
