--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,6 @@
 #container {
   text-align: center;
-
+  
   position: absolute;
   left: 0;
   right: 0;
@@ -22,6 +22,73 @@
   margin: 0;
 }
 
+
 #container a {
   text-decoration: none;
+  
+}
+.product-card {
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.product-image {
+  width: 40%;
+  padding-right: 1rem;
+}
+
+.product-image img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.product-info {
+  width: 60%;
+}
+
+.sale-form {
+  margin-top: 1rem;
+}
+
+.sale-form ion-item {
+  margin-bottom: 1rem;
+}
+
+.modal-content {
+  padding: 1rem;
+}
+
+
+ion-card {
+  margin: 10px;
+  border-radius: 8px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+
+}
+
+ion-card img {
+  height: 200px;
+  width: auto; 
+  object-fit: contain; 
+  margin: 12px auto; 
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+ion-card ion-icon{
+  margin-right: 20px;
+  font-size: 1rem;
+
+}
+ion-searchbar {
+  margin: 10px;
+}
+
+ion-segment {
+  margin: 10px;
+}
+ion-modal{
+  z-index: 9999;
 }
